--- a/index.html
+++ b/index.html
@@ -9,6 +9,144 @@
   </head>
 
   <body>
+    <div class="overall">
+      <div class="div1">
+        <div class="spider hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-1.png">
+          <h5>Spiderman</h5>
+          <h1>13</h1>
+        </div>
+
+        <div class="Captain hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-2.png">
+          <h5>Captain</h5>
+          <h1>13</h1>
+        </div>
+
+        <div class="Wonder hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-3.png">
+          <h5>Wonder</h5>
+          <h1>13</h1>
+        </div>
+
+        <div class="Gem hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-4.png">
+          <h5>Gem</h5>
+          <h1>13</h1>
+        </div>
+
+        <div class="stalin hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-5.png">
+          <h5>Stalin</h5>
+          <h1>13</h1>
+        </div>
+      </div>
+      <div class="div2">
+        <div class="hitler hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-6.png">
+          <h5>hitler</h5>
+          <h1>13</h1>
+        </div>
+
+        <div class="masker hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-7.png">
+          <h5>masker</h5>
+          <h1>13</h1>
+        </div>
+
+        <div class="Blackwidow hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-8.png">
+          <h5>black<brwidow></h5>
+          <h1>13</h1>
+        </div>
+
+        <div class="cat hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-9.png">
+          <h5>cat</h5>
+          <h1>13</h1>
+        </div>
+
+        <div class="shield hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-10.png">
+          <h5>shield</h5>
+          <h1>13</h1>
+        </div>
+      </div>
+
+      <div class="div3">
+        <div class="score1">5-0</div>
+        <div class="score2">5 - 0</div>
+        <div class="score3">5 - 0</div>
+        <div class="score4">5 - 0</div>
+        <div class="score5">5 - 0</div>
+      </div>
+
+      <div class="div4">
+        <div class="bluemask hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-11.png">
+          <h5>bluemask</h5>
+          <h1>13</h1>
+        </div>
+
+        <div class="goggles hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-12.png">
+          <h5>goggles</h5>
+          <h1>13</h1>
+        </div>
+
+        <div class="hulk hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-13.png">
+          <h5>hulk</h5>
+          <h1>13</h1>
+        </div>
+
+        <div class="deadpool hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-14.png">
+          <h5>deadpool</h5>
+          <h1>13</h1>
+        </div>
+
+        <div class="blackpanther hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-15.png">
+          <h5>black<br>panther></h5>
+          <h1>13</h1>
+        </div>
+      </div>
+
+      <div class="div5">
+        <div class="doctor hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-16.png">
+          <h5>doctor</h5>
+          <h1>13</h1>
+        </div>
+
+        <div class="thor hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-17.png">
+          <h5>thor</h5>
+          <h1>13</h1>
+        </div>
+        <div class="stoneface hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-18.png">
+          <h5>stoneface</h5>
+          <h1>13</h1>
+        </div>
+
+        <div class="wasp hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-19.png">
+          <h5>wasp</h5>
+          <h1>13</h1>
+        </div>
+
+        <div class="thanos hero">
+          <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-20.png">
+          <h5>thanos</h5>
+          <h1>13</h1>
+        </div>
+      </div>
+
+    </div>
+
+
     <footer class="footer">Made with ♥️ by Kalvian</footer>
   </body>
 </html>
