--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <div class="Blackwidow hero">
           <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-8.png">
-          <h5>black<brwidow></h5>
+          <h5>blackwidow</h5>
           <h1>13</h1>
         </div>
 
