--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
         <div class="blackpanther hero">
           <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-15.png">
-          <h5>black<br>panther</h5>
+          <h5>panther</h5>
           <h1>13</h1>
         </div>
       </div>
